# oss-skill

./: .gitignore  OSS_CHECK_USER_GUIDE.md  README.md  USER_GUIDE.md  install_devin.ps1  install_devin.sh  oss_check.py  oss_compliance.py  pyproject.toml  simple_oss_check.py  test_scanner.py
.agents/skills/engineering/github-ops/: README.md  SKILL.md  skill.yaml
.agents/skills/engineering/oss-check/: SKILL.md  config.yaml  skill.yaml
distribution-package/: CHANGELOG.md  DISTRIBUTION.md  INSTALLATION.md  LICENSE  PACKAGE_README.md  README.md  install_devin.ps1  oss_check_skill-1.0.0-py3-none-any.whl  oss_compliance_config.yaml.example  pyproject.toml
docs/: SDD-HLD.md  packaging-distribution.md  technical-specs.md
oss_check_impl/: __init__.py
oss_check_impl/core/: __init__.py  jenkins_analyzer.py  models.py  scanner.py
oss_check_impl/ecosystems/: __init__.py  base.py  go.py  maven.py  npm.py  python.py
oss_check_impl/utils/: __init__.py  config.py  formatters.py  github_api.py  jenkins_api.py
skills/oss-check/: SKILL.md
src/oss_check/: config.py
src/oss_compliance/: __init__.py  config.py  reporter.py  scanner.py
