[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oss-check"
version = "1.0.0"
description = "OSS Check - Standalone OSS compliance scanning for AI agents and development environments"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Development Team", email = "dev@example.com"}
]
keywords = ["oss", "compliance", "scanning", "devin", "claude", "ai-assistant", "sdd-skill"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "urllib3>=2.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

enhanced = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.scripts]
oss-check = "oss_check:main"

[project.urls]
Homepage = "https://github.com/your-org/oss-check"
Documentation = "https://github.com/your-org/oss-check/docs"
Repository = "https://github.com/your-org/oss-check"
"Bug Tracker" = "https://github.com/your-org/oss-check/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oss_check = ["*.yaml.example"]

[tool.setuptools.package-dir]
oss_check = "src/oss_compliance"

[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false